--- a/blog/source/_posts/高级程序设计2.md
+++ b/blog/source/_posts/高级程序设计2.md
@@ -5,9 +5,17 @@ tags: [js,高级程序设计]
 ---
 
 ### 语法
+
 1.区分大小写
 要理解的第一个概念就是ECMAcript的一切（变量，函数名和操作符）都区分大小写。这就意味着，变量名test和Test分别表示两个不同的变量，而函数名不能使用typeof，因为它是一个关键字，但typeOf则完全可以是一个有效的函数名。
-### 区分大小写 
+
+2.标识符
+
+所谓标识符，就是指变量、函数、属性的名，或者函数的参数。标识符命名规则如下：
+>* 第一个字符必须是一个字母、下划线(_)或一个美元符号($);
+ * 其他字符可以是字母、下划线、美元符号或数字。
+ 标识符中的字母也可以包含扩展的 ASCII 或 Unicode 字母字符(如 À 和 Æ),但我们不推荐这样做。 按照惯例,ECMAScript 标识符采用驼峰大小写格式,也就是第一个字母小写,剩下的每个单词的首字母大写,例如:irstSecond myCar  doSomethingImportant
+ * 不能把关键字、保留字、true、false 和 null 用作标识符。
 ### 标识符 
 ### 注释
 ### 语句
