--- a/blog/source/_posts/高级程序设计3.md
+++ b/blog/source/_posts/高级程序设计3.md
@@ -1,5 +1,267 @@
 ---
-title: 高级程序设计3
+title: 高级程序设计--语法、变量类型、操作符、语句、函数(下)
 date: 2016-11-14 17:55:17
-tags:
+tags: [js,高级程序设计]
 ---
+
+### 语句
+ECMA-262 规定了一组语句(也称为流控制语句)。从本质上看,语句定义了 ECMAScript 中的主要 语法,语句通常使用一或多个关键字来完成给定任务。语句可以很简单,例如通知函数退出;也可以比 较复杂,例如指定重复执行某个命令的次数 
+1 if语句
+大多数编程语言中最为常用的一个语句就是 if 语句。以下是 if 语句的语法:
+```bash
+     if (condition) statement1 else statement2
+```
+2 do-while
+do-while 语句是一种后测试循环语句,即只有在循环体中的代码执行之后,才会测试出口条件。 换句话说,在对条件表达式求值之前,循环体内的代码至少会被执行一次。以下是 do-while 语句的 语法:
+```bash 
+    do {
+        statement
+    } while (expression);
+ ```
+
+while 语句属于前测试循环语句,也就是说,在循环体内的代码被执行之前,就会对出口条件求值。					
+3.while语句					
+像 do-while 这种后测试循环语句最常用于循环体中的代码至少要被执行一次的因此,循环体内的代码有可能永远不会被执行。以下是 while语句的语法 :while(expression) statement
+
+<!--more-->
+
+下面是一个示例:
+
+```bash
+var i = 0;				
+while (i < 10) {
+i += 2;
+}
+```
+
+在这个例子中,变量 i 开始时的值为 0,每次循环都会递增 2。而只要 i 的值小于 10,循环就会继续下去。		
+4. for语句
+
+for 语句也是一种前测试循环语句,但它具有在执行循环之前初始化变量和定义循环后要执行的代	码的能力。以下是 for 语句的语法:
+for (initialization; expression; post-loop-expression) statement
+下面是一个示例:
+
+```bash
+var count = 10;
+for (var i = 0; i < count; i++){
+alert(i)；
+}			
+```
+
+使用 while 循环做不到的,使用 for 循环同样也做不到。也就是说,for 循环只是把与循环有关的代码集中在了一个位置。				
+5 for-in语句				
+for-in 语句是一种精准的迭代语句,可以用来枚举对象的属性。以下是 for-in 语句的语法:
+for (property in expression) statement
+下面是一个示例:
+
+```bash
+for (var propName in window) {
+     document.write(propName);					
+}
+```
+
+> 在这个例子中,我们使用 for-in 循环来显示了 BOM 中 window 对象的所有属性。每次执行循环时,都会将 window 对象中存在的一个属性名赋值给变量 propName。这个过程会一直持续到对象中的所有属性都被枚举一遍为止。与 for 语句类似,这里控制语句中的 var 操作符也不是必需的。但是,为了保证使用局部变量,我们推荐上面例子中的这种做法。ECMAScript 对象的属性没有顺序。因此,通过 for-in 循环输出的属性名的顺序是不可预测的。具体来讲,所有属性都会被返回一次,但返回的先后次序可能会因浏览器而异。但是,如果表示要迭代的对象的变量值为 null 或 undefined,for-in 语句会抛出错误。ECMAScript 5 更正了这一行为;对这种情况不再抛出错误,而只是不执行循环体。为了保证最大限度的兼容性,建议在使用 for-in 循环之前,先检测确认该对象的值不是 null 或 undefined。（Safari 3 以前版本的 for-in 语句中存在一个 bug,该 bug 会导致某些属性被返回两次。）
+
+6 label语句
+
+使用 label 语句可以在代码中添加标签,以便将来使用。以下是 label 语句的语法:
+label: statement
+下面是一个示例:	
+```bash				
+    start: for (var i=0; i < count; i++) {
+        alert(i);			
+}
+```
+
+这个例子中定义的 start 标签可以在将来由 break 或 continue 语句引用。加标签的语句一般都				要与 for 语句等循环语句配合使用。
+	
+7 break和continue语句					
+break 和 continue 语句用于在循环中精确地控制代码的执行。其中,break 语句会立即退出循环,强制继续执行循环后面的语句。而 continue 语句虽然也是立即退出循环,但退出循环后会从循环的顶部继续执行。请看下面的例子:	
+
+```bah			
+var num = 0;
+for (var i=1; i < 10; i++) {
+    if (i % 5 == 0) {
+    break;
+}
+num++;
+}alert(num);    //4	
+```
+
+这个例子中的 for 循环会将变量 i 由 1 递增至 10。在循环体内,有一个 if 语句检查 i 的值是否
+可以被 5 整除(使用求模操作符)。如果是,则执行 break 语句退出循环。另一方面,变量 num 从 0 开
+始,用于记录循环执行的次数。在执行 break 语句之后,要执行的下一行代码是 alert()函数,结果
+显示 4。也就是说,在变量 i 等于 5 时,循环总共执行了 4 次;而 break 语句的执行,导致了循环在
+num 再次递增之前就退出了。如果在这里把 break 替换为 continue 的话,则可以看到另一种结果:	
+
+```bash				
+var num = 0;
+    for (var i=1; i < 10; i++) {
+        if (i % 5 == 0) {					
+        continue;					
+    }					
+num++;
+}
+alert(num);    //8			
+```
+例子的结果显示 8,也就是循环总共执行了 8 次。当变量 i 等于 5 时,循环会在 num 再次递增之前退出,但接下来执行的是下一次循环,即 i 的值等于 6 的循环。于是,循环又继续执行,直到 i 等于10 时自然结束。而 num 的最终值之所以是 8,是因为 continue 语句导致它少递增了一次break 和 continue 语句都可以与 label 语句联合使用,从而返回代码中特定的位置。这种联合使用的情况多发生在循环嵌套的情况下,如下面的例子所示:	
+
+```bash		
+var num = 0;
+outermost:
+for (var i=0; i < 10; i++) {
+     for (var j=0; j < 10; j++) {
+        if (i == 5 && j == 5) {
+            break outermost;
+        }
+    num++;
+ }					
+}
+ alert(num);    //55		
+ ```
+
+在这个例子中,outermost 标签表示外部的 for 语句。如果每个循环正常执行 10 次,则 num++语句就会正常执行 100 次。换句话说,如果两个循环都自然结束,num 的值应该是 100。但内部循环中的 break 语句带了一个参数:要返回到的标签。添加这个标签的结果将导致 break 语句不仅会退出内部的 for 语句(即使用变量 j 的循环),而且也会退出外部的 for 语句(即使用变量 i 的循环)。为此,当变量 i 和 j 都等于 5 时,num 的值正好是 55。同样,continue 语句也可以像这样与 label 语句联用,如下面的例子所示:				
+```bash
+var num = 0;
+outermost:
+for (var i=0; i < 10; i++) {					
+for (var j=0; j < 10; j++) {
+if (i == 5 && j == 5) {
+continue outermost;					
+}			
+num++;
+}					
+}
+alert(num);    //95	
+```
+
+在这种情况下,continue 语句会强制继续执行循环——退出内部循环,执行外部循环。当 j 是 5时,continue 语句执行,而这也就意味着内部循环少执行了 5 次,因此 num 的结果是 95。虽然联用 break、continue 和 label 语句能够执行复杂的操作,但如果使用过度,也会给调试带来麻烦。在此,我们建议如果使用 label 语句,一定要使用描述性的标签,同时不要嵌套过多的循环。		
+
+8 with语句					
+with 语句的作用是将代码的作用域设置到一个特定的对象中。with 语句的语法如下:
+with (expression) statement;
+定义 with 语句的目的主要是为了简化多次编写同一个对象的工作,如下面的例子所示:					
+    var qs = location.search.substring(1);
+    var hostName = location.hostname;
+    var url = location.href;
+上面几行代码都包含 location 对象。如果使用 with 语句,可以把上面的代码改写成如下所示:	
+
+```bash			
+with(location){
+    var qs = search.substring(1);
+    var hostName = hostname;
+    var url = href;			
+}
+```
+
+在这个重写后的例子中,使用 with 语句关联了 location 对象。这意味着在 with 语句的代码块内部,每个变量首先被认为是一个局部变量,而如果在局部环境中找不到该变量的定义,就会查询
+location 对象中是否有同名的属性。如果发现了同名属性,则以 location 对象属性的值作为变量的值。严格模式下不允许使用 with 语句,否则将视为语法错误。(由于大量使用 with 语句会导致性能下降,同时也会给调试代码造成困难,因此在开发大型应用程序时,不建议使用 with 语句。)
+9 switch语句				
+switch 语句与 if 语句的关系最为密切,而且也是在其他语言中普遍使用的一种流控制语句。
+ECMAScript 中 switch 语句的语法与其他基于 C 的语言非常接近,如下所示:    
+
+```bash
+switch (expression) {
+      case value: statement
+        break;
+      case value: statement				
+        break;
+      case value: statement		
+        break;					
+     default: statement
+}					
+```
+
+从根本上讲,switch 语句就是为了让开发人员免于编写像下面这样的代码:
+
+```bash					
+if (i == 25){
+  alert("25"){																	
+} else if (i == 35) {
+  alert("35");			
+    } else {
+      alert("Other");			
+}			
+```
+
+而与此等价的 switch 语句如下所示:			
+```bash		
+    switch (i) {
+        case 25:
+            alert("25");					
+            break;
+        case 35:			
+            alert("35");		
+            break;
+        case 45:			
+            alert("45");		
+            break;
+        default:			
+            alert("Other");		
+}（switch 语句在比较值时使用的是全等操作符,因此不会发生类型转换(例如,字符串"10"不等于数值 10)。
+```
+
+### 函数					
+函数对任何语言来说都是一个核心的概念。通过函数可以封装任意多条语句,而且可以在任何地方、任何时候调用执行。ECMAScript 中的函数使用 function 关键字来声明,后跟一组参数以及函数体。return 语句也可以不带有任何返回值。在这种情况下,函数在停止执行后将返回 undefined值。这种用法一般用在需要提前停止函数执行而又不需要返回值的情况下。
+（ps:推荐的做法是要么让函数始终都返回一个值,要么永远都不要返回值。否则,如果函数有时候返回值,有时候有不返回值,会给调试代码带来不便。）				
+1 理解参数				
+ECMAScript函数的参数与大多数其他语言中函数的参数有所不同。ECMAScript函数不介意传递进来多少个参数,也不在乎传进来参数是什么数据类型。也就是说,即便你定义的函数只接收两个参数,在调用这个函数时也未必一定要传递两个参数。可以传递一个、三个甚至不传递参数,而解析器永远不会有什么怨言。之所以会这样,原是ECMAScript 中的参数在内部是用一个数组来表示的。函数接收到的始终都是这个数组,而不关心数组中包含哪些参数(如果有参数的话)。如果这个数组中不包含任何元素,无所谓;如果包含多个元素,也没有问题。实际上,在函数体内可以通过 arguments 对象来访问这个参数数组,从而获取传递给函数的每一个参数。
+其实,arguments 对象只是与数组类似(它并不是 Array 的实例),因为可以使用方括号语法访问它的每一个元素(即第一个元素是 arguments[0],第二个元素是 argumetns[1],以此类推),使用 length 属性来确定传递进来多少个参数。在前面的例子中,sayHi()函数的第一个参数的名字叫name,而该参数的值也可以通过访问 arguments[0]来获取。因此,那个函数也可以像下面这样重写,即不显式地使用命名参数:
+
+```bash
+function sayHi() {
+    alert("Hello " + arguments[0] + "," + arguments[1]);					}
+function howManyArgs() {
+    alert(arguments.length);
+}					
+howManyArgs("string", 45);  //2
+howManyArgs();              //0
+howManyArgs(12);            //1
+```
+
+执行以上代码会依次出现 3 个警告框,分别显示 2、0 和 1。由此可见,开发人员可以利用这一点让 5
+函数能够接收任意个参数并分别实现适当的功能。请看下面的例子:	
+
+```bash				
+function doAdd() {
+    if(arguments.length == 1) {
+    alert(arguments[0] + 10);
+} else if (arguments.length == 2) {
+    alert(arguments[0] + arguments[1]);
+}
+doAdd(10);         //20
+doAdd(30, 20);     //50		
+```
+
+函数 doAdd()会在只有一个参数的情况下给该参数加上 10;如果是两个参数,则将那个参数简单相加并返回结果。因此,doAdd(10)会返回 20,而 doAdd(30,20)则返回 50。虽然这个特性算不上完美的重载,但也足够弥补 ECMAScript 的这一缺憾了。
+因为 arguments对象中的值会自动反映到对应的命名参数,所以修改 arguments[1],也就修改了 num2,结果它们的值都会变成 10。不过,这并不是说读取这两个值会访问相同的内存空间;它们的内存空间是独立的,但它们的值会同步。另外还要记住,如果只传入了一个参数,那么为 arguments[1]设置的值不会反应到命名参数中这是因为 arguments 对象的长度是由传入的参数个数决定的,不是由定义函数时的命名参数的个数决定的。
+关于参数还要记住最后一点:没有传递值的命名参数将自动被赋予 undefined 值。这就跟定义了变量但又没有初始化一样。例如,如果只给 doAdd()函数传递了一个参数,则 num2 中就会保存undefined 值。				
+严格模式对如何使用 arguments 对象做出了一些限制。首先,像前面例子中那样的赋值会变得无效。也就是说,即使把 arguments[1]设置为 10,num2 的值仍然还是 undefined。其次,重写arguments 的值会导致语法错误(代码将不会执行)。
+??ECMAScript 中的所有参数传递的都是值,不可能通过引用传递参数。
+
+#### 2.没有重载				
+ECMAScript 函数不能像传统意义上那样实现重载。而在其他语言(如 Java)中,可以为一个函数编写两个定义,只要这两个定义的签名(接受的参数的类型和数量)不同即可。如前所述,ECMAScirpt函数没有签名,因为其参数是由包含零或多个值的数组来表示的。而没有函数签名,真正的重载是不可能做到的。					
+如果在 ECMAScript 中定义了两个名字相同的函数,则该名字只属于后定义的函数。请看下面的例子:
+```bash
+function addSomeNumber(num){
+    return num + 100;					
+}			
+function addSomeNumber(num) {
+    return num + 200;					
+}
+var result = addSomeNumber(100);//300	
+```
+
+在此,函数 addSomeNumber()被定义了两次。第一个版本给参数加 100,而第二个版本给参数加200。由于后定义的函数覆盖了先定义的函数,因此当在最后一行代码中调用这个函数时,返回的结果就是 300。	
+
+### 小结
+> JavaScript 的核心语言特性在 ECMA-262 中是以名为 ECMAScript 的伪语言的形式来定义的。ECMAScript 中包含了所有基本的语法、操作符、数据类型以及完成基本的计算任务所必需的对象,但没有对取得输入和产生输出的机制作出规定。理解 ECMAScript 及其纷繁复杂的各种细节,是理解其在Web 浏览器中的实现——JavaScript 的关键。目前大多数实现所遵循的都是 ECMA-262 第 3 版,但很多 3也已经着手开始实现第 5 版了。以下简要总结了 ECMAScript 中基本的要素。						
+  ECMAScript 中的基本数据类型包括 Undefined、Null、Boolean、Number 和 String。					
+  与其他语言不同,ECMScript 没有为整数和浮点数值分别定义不同的数据类型,Number 类型可用于表示所有数值。						
+  ECMAScript 中也有一种复杂的数据类型,即 Object 类型,该类型是这门语言中所有对象的基					础类型。							
+  严格模式为这门语言中容易出错的地方施加了限制。					
+  ECMAScript 提供了很多与 C 及其他类 C 语言中相同的基本操作符,包括算术操作符、布尔操作							
+   符、关系操作符、相等操作符及赋值操作符等。
+  ECMAScript 从其他语言中借鉴了很多流控制语句,例如 if 语句、for 语句和 switch 语句等。
+ECMAScript 中的函数与其他语言中的函数有诸多不同之处。
+  无须指定函数的返回值,因为任何 ECMAScript 函数都可以在任何时候返回任何值。
